fix(styles): fix color contrast issue with selected Combobox text (#1235)

--- a/packages/styles/combobox.css
+++ b/packages/styles/combobox.css
@@ -181,6 +181,7 @@
 }
 
 .ComboboxOption {
+  --field-listbox-selected-text-color: var(--combobox-option-font-color);
   color: var(--combobox-option-font-color);
   padding: var(--space-smallest);
   cursor: pointer;
